Version 5.5 (?? 2014)
  * Improved document for croston()
  * Added stlm() and forecast.stlm() functions, and added forecastfunction as a way of specifying
    a forecast method in stlf() and forecast.stl().
  * Improved forecast.ar() so that it is more likely to work if ar() and forecast.ar() are
    embedded within other functions.

Version 5.4 (8 May 2014)
  * Fixed bug in forecast.tbats() and forecast.bats() when ts.frequency does not match seasonal.periods.
  * Fixed bug in getResponse.lm() when there's a logged dependent variable.
  * Modified ets() to avoid problems when data contains large numbers.
  * Modified ets() to produce forecasts when the data are constant.
  * Improved arima.errors() to find xreg more often, and to return an error if it can't be found.

Version 5.3 (24 March 2014)
  * Unit tests added
  * Fixed bug in zzhw() which reversed the sign of the residuals.
  * Updated help file for CV() to specify it is only leave-one-out.
  * Fixed guer.cv() to allow non-integer periods without warning.
  * Added use.initial.values argument in ets().
  * Added arimaorder() function.
  * Modified warnings suppression by using suppressWarnings() throughout.

Version 5.2 (25 February 2014)
  * Changed default number of cores to 2 for all functions that use parallel processing.
  * Removed remaining call to bats() from examples that are run.

Version 5.1 (8 February 2014)
  * Fixed bug in tsoutliers() and tsclean() with very short seasonal series.
  * Fixed bug in Arima() when seasonal order is specified numerically instead of via a list.
  * Removed dimension attribution from output of arima.errors()
  * Improved handling of "test" in accuracy()
  * Changed parallel processing to parLapply for auto.arima()
  * Added timeDate dependency to avoid errors in easter() and link to Rcpp >= 0.11.0.

Version 5.0 (17 January 2014)
  * Added argument model to dshw().
  * Added bizdays() and easter() for calendar variables.