@@ -4,6 +4,9 @@ Version 5.5 (?? 2014)
     a forecast method in stlf() and forecast.stl().
   * Improved forecast.ar() so that it is more likely to work if ar() and forecast.ar() are
     embedded within other functions.
+  * Improved handling of ARIMA models with seasonality greater than 48
+  * Improved handling of some degenerate regression models in nsdiffs()
+  * Changed AIC for poor models from 1e20 to Inf.
 
 Version 5.4 (8 May 2014)
   * Fixed bug in forecast.tbats() and forecast.bats() when ts.frequency does not match seasonal.periods.
